services/fd-tagging-tool/src/test/resources/invalid/NoFeaturePresent/NoFeaturePresent.tg
package invalid.NoFeaturePresent;

tagging NoFeaturePresent {
    feature invalid.NoFeaturePresent.NoFeaturePresent.Truck contains invalid.NoFeaturePresent.NoFeaturePresent;
}